--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
             <a href="{{ site.baseurl }}/projects">Projects</a>
             <a href="{{ site.baseurl }}/courses">Courses</a>
             <a href="{{ site.baseurl }}/publications">Publications</a>
+            <a href="{{ site.baseurl }}/assets/DanWangResume.pdf">Resume</a>
           
           </nav>
         </header>
